--- a/CSS/login.css
+++ b/CSS/login.css
@@ -4,6 +4,11 @@
   margin: 0;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   background-image: url("../images/back-color.jpg");
   background-repeat: no-repeat;
@@ -27,7 +32,7 @@ header {
 }
 
 .main_section {
-  height: 100%;
+  /* height: 100%; */
   color: white;
 }
 
