--- a/CSS/main.css
+++ b/CSS/main.css
@@ -194,6 +194,7 @@ header {
 .team {
   display: grid;
   grid-template-columns: auto auto auto;
+  grid-row-gap: 0.75rem;
   /* grid-column-gap: 1rem; */
 }
 
@@ -288,27 +289,6 @@ header {
   transform: scale(0.95, 0.95);
 }
 
-/* .image{
-    border: 3px solid white;
-    border-radius: 100%;
-    width: 250px;
-    height: 250px;
-    overflow: hidden;
-    background: white;
-    margin: auto auto;
-}
-
-.image img{
-    width: 100%;
-    height: 100%;
-    border-radius: 100%;
-    transition: all 0.3s;
-}
-
-.image:hover img{
-    transform: scale(0.95,0.95);
-} */
-
 /* Gallery section  */
 
 .gallery_container {
@@ -322,12 +302,12 @@ header {
 .contact_container {
   display: grid;
   grid-template-columns: 1fr;
-  grid-row-gap: 0.5rem;
+  grid-row-gap: 0.75rem;
 }
 
 .designers {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: auto auto;
   max-width: 40%;
   margin: auto auto;
   font-size: 1rem;
@@ -416,6 +396,7 @@ textarea {
 }
 #user_message {
   width: 80%;
+  grid-area: message;
 }
 #submit_btn {
   border-radius: 100%;
@@ -451,14 +432,15 @@ textarea:focus {
 /* Small devices (portrait tablets and large phones, 600px and up) /
 @media only screen and (min-width: 600px) {...} 
 
-/ Medium devices (landscape tablets, 768px and up) /
-@media only screen and (min-width: 768px) {...} 
 
  
 
 / Extra large devices (large laptops and desktops, 1200px and up) */
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (max-width: 1200px) {
+  #menu {
+    display: none;
+  }
 }
 
 /* Large devices (laptops/desktops, 992px and up) / */
@@ -484,6 +466,10 @@ textarea:focus {
 
   /*  Main content styling   */
 
+  .landing {
+    width: 75%;
+  }
+
   .landing_heading h1 {
     font-size: 6vw;
   }
@@ -493,6 +479,10 @@ textarea:focus {
   }
 
   /*  About ktech  */
+
+  .about_ktech_container {
+    width: 80%;
+  }
 
   .about_ktech_heading {
     font-size: 2.5rem;
@@ -510,6 +500,10 @@ textarea:focus {
     height: 15.5vw;
   }
 
+  .event {
+    font-size: 1.5vw;
+  }
+
   /* Contact Section  */
 
   .designers {
@@ -517,8 +511,6 @@ textarea:focus {
   }
 
   .designer_image {
-    /* width: 250px;
-    height: 250px; */
     max-width: 60%;
     height: auto;
     border: 3px solid white;
@@ -536,8 +528,224 @@ textarea:focus {
     border-radius: 100%;
     transition: all 0.3s;
   }
+  .main_form {
+    grid-template-areas:
+      "name"
+      "email"
+      "message";
+    grid-row-gap: 0.5rem;
+  }
+
+  #submit_btn {
+    margin-top: 1rem;
+  }
+
+  .contact_info {
+    font-size: 1.6vw;
+  }
+
+  /* .contact_form span {
+    font-size: 1.5rem;
+  } */
+}
+
+/* / Medium devices (landscape tablets, 768px and up) / */
+@media only screen and (max-width: 768px) {
+  .back_heading {
+    font-size: 8vw;
+  }
+
+  /*  Team section  */
+
+  .about_team_container {
+    margin-top: 6rem;
+  }
+
+  .team {
+    grid-template-columns: auto auto;
+    grid-row-gap: 0.75rem;
+    /* grid-column-gap: 1rem; */
+  }
+
+  .member_name h1 {
+    font-size: 2.5vw;
+  }
+
+  /* Events page  */
+
+  .about_events_container {
+    margin-top: 4rem;
+    margin-bottom: 5rem;
+  }
+
+  .events_details {
+    grid-template-columns: auto;
+  }
+
+  .event_image {
+    width: 50%;
+    height: 24vw;
+    border: 3px solid white;
+    border-radius: 100%;
+    /* max-width: 90%; */
+    overflow: hidden;
+    background: white;
+    margin: auto auto;
+    transition: 0.5s all;
+  }
+
+  .event {
+    font-size: 1.5vw;
+  }
+
+  /* Contact Section  */
+
+  .designers {
+    font-size: 13px;
+  }
+
+  .contact_details {
+    grid-template-columns: 1fr;
+  }
+  .contact_info {
+    font-size: 1.5vw;
+    grid-row-gap: 1rem;
+  }
+
+  .form_header span {
+    font-size: 2.3vw;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  /*  Main content styling   */
+
+  .landing {
+    width: 75%;
+    grid-template-areas:
+      "heading"
+      "para"
+      "logo";
+  }
+
+  .landing_heading h1 {
+    font-size: 6vw;
+  }
+
+  .landing_para {
+    font-size: 3.5vw;
+  }
+
+  /*  About ktech  */
+
+  .about_ktech_container {
+    width: 60%;
+  }
+
+  .about_ktech_heading {
+    font-size: 2.5rem;
+    font-size: 4vw;
+  }
+
+  .about_ktech_para {
+    font-size: 1.5rem;
+    font-size: 3vw;
+  }
+
+  .member_name h1 {
+    font-size: 4vw;
+  }
+
+  /* Contact Section  */
+
+  .designers {
+    font-size: 14px;
+    grid-template-columns: auto;
+    grid-row-gap: 1rem;
+  }
+
+  .designer_image {
+    max-width: 60%;
+    height: auto;
+    border: 3px solid white;
+    border-radius: 100%;
+    overflow: hidden;
+    background: white;
+    margin: auto auto;
+    transition: 0.5s all;
+  }
+
+  .contact_container {
+    margin-top: 5rem;
+  }
+
+  .contact_info {
+    font-size: 2vw;
+  }
+
+  .contact_container {
+    grid-row-gap: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  /*  Main content styling   */
+
+  .landing {
+    width: 75%;
+    grid-template-areas:
+      "heading"
+      "para"
+      "logo";
+  }
+
+  .landing_heading h1 {
+    font-size: 7vw;
+  }
+
+  .landing_para {
+    font-size: 4vw;
+  }
+
+  /*  About ktech  */
+
+  .about_ktech_container {
+    width: 60%;
+  }
+
+  .about_ktech_heading {
+    font-size: 3rem;
+    font-size: 4.5vw;
+  }
+
+  .about_ktech_para {
+    font-size: 1.5rem;
+    font-size: 3.5vw;
+  }
+
+  .team {
+    grid-template-columns: auto;
+    grid-row-gap: 0.75rem;
+    /* grid-column-gap: 1rem; */
+  }
+
+  .member_name h1 {
+    font-size: 6vw;
+  }
+  .event {
+    font-size: 3.5vw;
+  }
+
+  .event_image {
+    width: 70%;
+    height: 33vw;
+  }
+
+  .contact_info {
+    font-size: 4vw;
+  }
 
   .contact_form span {
-    font-size: 1.5rem;
+    font-size: 6vw;
   }
 }
